[workspace]
members = [
    "cli",
    "client",
    "codec",
    "crypto",
    "ffi",
    "keystore",
    "node",
    "pallet",
]

[patch.crates-io]
substrate-subxt = { path = "../subxt" }
libipld = { path = "../../ipld/rust-ipld" }
ipfs-embed = { path = "../../ipld/ipfs-embed" }
tiny-multihash = { path = "../../ipld/tiny-multihash" }
