[workspace]
members = [
    "cli",
    "client",
    "codec",
    "crypto",
    "ffi",
    "keystore",
    "net",
    "node",
]

[patch.crates-io]
frame-executive = { path = "../substrate/frame/executive" }
frame-metadata = { path = "../substrate/frame/metadata" }
frame-support = { path = "../substrate/frame/support" }
frame-system = { path = "../substrate/frame/system" }

sc-basic-authorship = { path = "../substrate/client/basic-authorship" }
sc-client-api = { path = "../substrate/client/api" }
sc-client-db = { path = "../substrate/client/db" }
sc-consensus = { path = "../substrate/client/consensus/common" }
sc-consensus-aura = { path = "../substrate/client/consensus/aura" }
sc-executor = { path = "../substrate/client/executor" }
sc-finality-grandpa = { path = "../substrate/client/finality-grandpa" }
sc-network = { path = "../substrate/client/network" }
sc-rpc-api = { path = "../substrate/client/rpc-api" }
sc-service = { path = "../substrate/client/service" }
sc-transaction-pool = { path = "../substrate/client/transaction-pool" }

sp-api = { path = "../substrate/primitives/api" }
sp-block-builder = { path = "../substrate/primitives/block-builder" }
sp-consensus = { path = "../substrate/primitives/consensus/common" }
sp-consensus-aura = { path = "../substrate/primitives/consensus/aura" }
sp-core = { path = "../substrate/primitives/core" }
sp-database = { path = "../substrate/primitives/database" }
sp-finality-grandpa = { path = "../substrate/primitives/finality-grandpa" }
sp-inherents = { path = "../substrate/primitives/inherents" }
sp-io = { path = "../substrate/primitives/io" }
sp-keyring = { path = "../substrate/primitives/keyring" }
sp-offchain = { path = "../substrate/primitives/offchain" }
sp-rpc = { path = "../substrate/primitives/rpc" }
sp-runtime = { path = "../substrate/primitives/runtime" }
sp-session = { path = "../substrate/primitives/session" }
sp-std = { path = "../substrate/primitives/std" }
sp-transaction-pool = { path = "../substrate/primitives/transaction-pool" }
sp-trie = { path = "../substrate/primitives/trie" }
sp-version = { path = "../substrate/primitives/version" }
