[package]
name = "sunshine-client-utils"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
async-std = "1.6.3"
async-trait = "0.1.38"
ipfs-embed = "0.3.1"
libipld = { version = "0.3.1", default-features = false }
parity-scale-codec = "1.3.4"
sled = "0.34.3"
sc-service = { version = "0.8.0-rc6", default-features = false }
sp-database = "2.0.0-rc6"
substrate-subxt = { version = "0.11.0", features = ["client"] }
sunshine-codec = { path = "../codec" }
sunshine-crypto = { path = "../crypto" }
sunshine-keystore = { path = "../keystore" }
sunshine-pallet-utils = { path = "../pallet" }
thiserror = "1.0.20"

jsonrpsee = { version = "0.1.0", optional = true }
sp-keyring = { version = "2.0.0-rc6", optional = true }
tempdir = { version = "0.3.7", optional = true }

[features]
mock = [
    "jsonrpsee",
    "sp-keyring",
    "sunshine-crypto/mock",
    "tempdir",
]
