[package]
name = "sunshine-client-utils"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
async-std = "1.6.4"
async-trait = "0.1.40"
ipfs-embed = "0.7.0"
jsonrpsee = "0.1.0"
libipld = { version = "0.6.0", default-features = false }
parity-scale-codec = "1.3.5"
sc-network = "0.8.0"
sc-service = { version = "0.8.0", default-features = false }
sled = "0.34.4"
substrate-subxt = { version = "0.12.0", features = ["client"] }
sunshine-codec = { path = "../codec" }
sunshine-crypto = { path = "../crypto" }
sunshine-keystore = { path = "../keystore" }
sunshine-client-net = { path = "../net" }
thiserror = "1.0.20"

sp-keyring = { version = "2.0.0", optional = true }
tempdir = { version = "0.3.7", optional = true }

[features]
mock = [
    "sp-keyring",
    "sunshine-crypto/mock",
    "tempdir",
]
