[package]
name = "sunshine-codec"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
generic-array = "0.14.4"
libipld = { version = "0.4.0", default-features = false, features = ["dag-cbor"] }
parity-scale-codec = "1.3.4"
hash-db = "0.15.2"
hash256-std-hasher = "0.15.2"
sp-trie = "2.0.0-rc6"
thiserror = "1.0.20"
tiny-multihash = "0.4.1"
tiny-cid = { version = "0.2.0", features = ["scale-codec"] }

[dev-dependencies]
async-std = { version = "1.6.3", features = ["attributes"] }
sp-core = "2.0.0-rc6"
sunshine-crypto = { path = "../crypto" }

[features]
default = ["std"]
std = ["tiny-multihash/std"]
