[package]
name = "sunshine-codec"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
anyhow = { version = "1.0.32", optional = true }
generic-array = "0.14.4"
libipld = { version = "0.5.1", default-features = false, features = ["dag-cbor"], optional = true }
parity-scale-codec = { version = "1.3.5", default-features = false }
hash-db = { version = "0.15.2", default-features = false }
hash256-std-hasher = { version = "0.15.2", default-features = false }
sp-trie = { version = "2.0.0-rc6", default-features = false }
thiserror = { version = "1.0.20", optional = true }
tiny-multihash = { version = "0.4.5", default-features = false, features = ["blake2b", "scale-codec"] }
tiny-cid = { version = "0.2.6", default-features = false, features = ["scale-codec"] }

[dev-dependencies]
async-std = { version = "1.6.3", features = ["attributes"] }
sp-core = "2.0.0-rc6"
sunshine-crypto = { path = "../crypto" }

[features]
default = ["std"]
std = [
    "anyhow",
    "hash256-std-hasher/std",
    "hash-db/std",
    "libipld",
    "parity-scale-codec/std",
    "sp-trie/std",
    "thiserror",
    "tiny-cid/std",
    "tiny-multihash/std",
]
