[package]
name = "sunshine-keystore"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Keybase keystore implementation."
license = "ISC"
documentation = "https://docs.rs/sunshine-keystore"
repository = "https://github.com/sunshine-protocol/sunshine-core"

[dependencies]
anyhow = "1.0.32"
async-std = "1.6.3"
async-trait = "0.1.38"
parity-scale-codec = "1.3.4"
rand = "0.7.3"
strobe-rs = "0.5.4"
sunshine-crypto = { path = "../crypto" }
thiserror = "1.0.20"

[dev-dependencies]
async-std = { version = "1.6.3", features = ["attributes"] }
tempdir = "0.3.7"
