[package]
name = "sunshine-client-net"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
futures = "0.3.5"
ipfs-embed-core = "0.7.0"
libipld = { version = "0.6.0", default-features = false }
sc-network = "0.8.0"
sp-runtime = "2.0.0"

[dev-dependencies]
async-std = { version = "1.6.4", features = ["attributes"] }
env_logger = "0.7.1"
ipfs-embed = "0.7.0"
sled = "0.34.4"
substrate-subxt = { version = "0.12.0", features = ["client"] }
sunshine-node-utils = { path = "../node", features = ["mock"] }
tempdir = "0.3.7"
