[package]
name = "sunshine-node-utils"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[features]
default = ["std"]
std = []
mock = [
    "frame-executive",
    "frame-support",
    "frame-system",
    "parity-scale-codec",
    "serde",
    "sc-executor",
    "sp-api",
    "sp-block-builder",
    "sp-offchain",
    "sp-runtime",
    "sp-session",
    "sp-transaction-pool",
    "sp-version",
]

[dependencies]
sc-basic-authorship = "0.8.0-rc6"
sc-client-api = "2.0.0-rc6"
sc-client-db = { version = "0.8.0-rc6", default-features = false, features = ["with-parity-db"] }
sc-consensus = "0.8.0-rc6"
sc-consensus-aura = "0.8.0-rc6"
sc-finality-grandpa = "0.8.0-rc6"
sc-network = "0.8.0-rc6"
sc-service = { version = "0.8.0-rc6", default-features = false }
sc-transaction-pool = "2.0.0-rc6"
sp-consensus = "0.8.0-rc6"
sp-consensus-aura = "0.8.0-rc6"
sp-core = "2.0.0-rc6"
sp-finality-grandpa = "2.0.0-rc6"
sp-inherents = "2.0.0-rc6"
tiny-multihash = { version = "0.4.5", default-features = false }

frame-executive = { version = "2.0.0-rc6", optional = true }
frame-support = { version = "2.0.0-rc6", optional = true }
frame-system = { version = "2.0.0-rc6", optional = true }
parity-scale-codec = { version = "1.3.5", optional = true }
serde = { version = "1.0.116", optional = true }
sc-executor = { version = "0.8.0-rc6", optional = true }
sp-api = { version = "2.0.0-rc6", optional = true }
sp-block-builder = { version = "2.0.0-rc6", optional = true }
sp-offchain = { version = "2.0.0-rc6", optional = true }
sp-runtime = { version = "2.0.0-rc6", optional = true }
sp-session = { version = "2.0.0-rc6", optional = true }
sp-transaction-pool = { version = "2.0.0-rc6", optional = true }
sp-version = { version = "2.0.0-rc6", optional = true }
