[package]
name = "sunshine-node-utils"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[features]
mock = [
    "sc-executor",
    "sp-runtime",
    "sunshine-mock-runtime",
]

[dependencies]
sc-basic-authorship = "0.8.0-rc6"
sc-client-api = "2.0.0-rc6"
sc-client-db = { version = "0.8.0-rc6", default-features = false, features = ["with-parity-db"] }
sc-consensus = "0.8.0-rc6"
sc-consensus-aura = "0.8.0-rc6"
sc-finality-grandpa = "0.8.0-rc6"
sc-network = "0.8.0-rc6"
sc-service = { version = "0.8.0-rc6", default-features = false }
sc-transaction-pool = "2.0.0-rc6"
sp-consensus = "0.8.0-rc6"
sp-consensus-aura = "0.8.0-rc6"
sp-core = "2.0.0-rc6"
sp-finality-grandpa = "2.0.0-rc6"
sp-inherents = "2.0.0-rc6"
tiny-multihash = { version = "0.4.5", default-features = false }

sc-executor = { version = "0.8.0-rc6", optional = true }
sp-runtime = { version = "2.0.0-rc6", optional = true }
sunshine-mock-runtime = { path = "runtime", optional = true }
