[package]
name = "sunshine-node-utils"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[features]
mock = [
    "sc-executor",
    "sp-runtime",
    "sunshine-mock-runtime",
]

[dependencies]
sc-basic-authorship = "0.8.0"
sc-client-api = "2.0.0"
sc-client-db = { version = "0.8.0", default-features = false, features = ["with-parity-db"] }
sc-consensus = "0.8.0"
sc-consensus-aura = "0.8.0"
sc-finality-grandpa = "0.8.0"
sc-network = "0.8.0"
sc-service = { version = "0.8.0", default-features = false }
sc-transaction-pool = "2.0.0"
sp-consensus = "0.8.0"
sp-consensus-aura = "0.8.0"
sp-core = "2.0.0"
sp-finality-grandpa = "2.0.0"
sp-inherents = "2.0.0"
tiny-multihash = { version = "0.4.7", default-features = false }

sc-executor = { version = "0.8.0", optional = true }
sp-runtime = { version = "2.0.0", optional = true }
sunshine-mock-runtime = { path = "runtime", optional = true }
