[package]
name = "sunshine-pallet-utils"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
blake2-rfc = { version = "0.2.18", default-features = false }
hash256-std-hasher = { version = "0.15.2", default-features = false }
hash-db = { version = "0.15.2", default-features = false }
parity-scale-codec = { version = "1.3.4", default-features = false }
sp-core = { version = "2.0.0-rc5", default-features = false }
libipld = { version = "0.3.0", optional = true }
serde = { version = "1.0.114", optional = true }

[features]
default = ["std"]
std = [
    "blake2-rfc/std",
    "hash256-std-hasher/std",
    "hash-db/std",
    "libipld",
    "parity-scale-codec/std",
    "serde",
    "sp-core/std",
]
